# sx127x

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
common/: CHANGELOG.md  Cargo.toml
common/src/: bits.rs  error.rs  lib.rs  registers.rs  spi.rs
dual_modem/: Cargo.toml
dual_modem/src/: lib.rs
examples/rp235x/async/: Cargo.toml
examples/rp235x/lora/async/: Cargo.toml  README.md
fsk/: CHANGELOG.md  Cargo.toml  README.md
fsk/examples/rp235x/async/: Cargo.toml
fsk/src/: dio.rs  driver.rs  lib.rs  registers.rs  types.rs
lora/: CHANGELOG.md  Cargo.toml  README.md
lora/examples/rp235x/async/: Cargo.toml  README.md
lora/examples/rp235x/async/src/: lib.rs
lora/examples/rp235x/async_half_duplex/: Cargo.toml  README.md
lora/examples/rp235x/async_half_duplex/src/: lib.rs
lora/examples/rp235x/sync/: Cargo.toml
lora/examples/rp235x/sync/src/: lib.rs
lora/src/: calculate.rs  constants.rs  driver.rs  evaluate.rs  lib.rs  registers.rs  types.rs  validate.rs
src/: common.rs  core.rs  lib.rs  registers.rs  types.rs
src/common/: interface.rs  mod.rs  modem.rs
src/fsk/: driver.rs  mod.rs  registers.rs  types.rs
src/lora/: bits.rs  calculate.rs  driver.rs  mod.rs  registers.rs  types.rs
src/shared/: mod.rs  registers.rs
