[package]
name = "sx127x-common"
version = "0.3.0"
edition = "2024"
authors = ["Jonathan D. Baker <jonathan@ardent.tech>"]
description = "Common code for the Semtech Sx127x chips."
keywords = ["embedded", "semtech", "sx127x"]
categories = ["embedded", "no-std"]
repository = "https://github.com/ardentTech/sx127x"
license = "MIT OR Apache-2.0"
exclude = ["CHANGELOG.md"]
readme = "README.md"

[dependencies]
defmt = { workspace = true, optional = true }
embedded-hal = { workspace = true, optional = true }
embedded-hal-async = { workspace = true }
maybe-async = { workspace = true }

[features]
default = []
defmt = ["dep:defmt"]
sync = ["maybe-async/is_sync", "dep:embedded-hal"]