[package]
name = "rp235x_async"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
cortex-m-rt = "0.7.0"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-embedded-hal = "0.5.0"
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-rp = { version = "0.9.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
embassy-sync = "0.7.2"
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
sx127x = { path = "../../../" }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

[profile.release]
# Enable generation of debug symbols even on release builds
debug = true

[[bin]]
name = "tx"
path = "src/bin/tx.rs"
test = false
doctest = false
bench = false