[package]
name = "sx127xfsk-rp235x-async"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
cortex-m-rt = { workspace = true }
defmt = { workspace = true }
defmt-rtt = { workspace = true }
embassy-embedded-hal = { workspace = true }
embassy-executor = { workspace = true, features = ["platform-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-futures = { workspace = true }
embassy-rp = { workspace = true, features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
embassy-sync = { workspace = true }
embassy-time = { workspace = true, features = ["defmt", "defmt-timestamp-uptime"] }
sx127xfsk = { path = "../../../", features = ["defmt"] }
panic-probe = { workspace = true, features = ["print-defmt"] }

[profile.release]
# Enable generation of debug symbols even on release builds
debug = true

[[bin]]
name = "tx"
path = "src/bin/tx.rs"
test = false
doctest = false
bench = false