[package]
name = "sx127xlora-rp235x-async"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
cortex-m-rt = "0.7.0"
defmt = { workspace = true }
defmt-rtt = "1.0.0"
embassy-embedded-hal = "0.6.0"
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-rp = { version = "0.10.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
embassy-sync = "0.8.0"
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
sx127xlora = { path = "../../../", features = ["defmt"] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

[profile.release]
# Enable generation of debug symbols even on release builds
debug = true

[lib]
name = "common"
path = "src/lib.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "cad"
path = "src/bin/cad.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "rx"
path = "src/bin/rx.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "rx_continuous"
path = "src/bin/rx_continuous.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "rx_single"
path = "src/bin/rx_single.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "rx_timeout"
path = "src/bin/rx_timeout.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "tx"
path = "src/bin/tx.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "valid_header"
path = "src/bin/valid_header.rs"
test = false
doctest = false
bench = false