[package]
name = "sx127xlora-rp235x-async"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
cortex-m-rt = { workspace = true }
defmt = { workspace = true }
defmt-rtt = { workspace = true }
embassy-embedded-hal = { workspace = true }
embassy-executor = { workspace = true, features = ["platform-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-futures = { workspace = true }
embassy-rp = { workspace = true, features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
embassy-sync = { workspace = true }
embassy-time = { workspace = true, features = ["defmt", "defmt-timestamp-uptime"] }
panic-probe = { workspace = true, features = ["print-defmt"] }
static_cell = "2.1.1"
sx127xlora = { path = "../../../", features = ["defmt"] }
critical-section = "1.2.0"

[profile.release]
# Enable generation of debug symbols even on release builds
debug = true

[lib]
name = "common"
path = "src/lib.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "rx_continuous"
path = "src/bin/rx_continuous.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "rx_single"
path = "src/bin/rx_single.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "tx"
path = "src/bin/tx.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "tx_fhss"
path = "src/bin/tx_fhss.rs"
test = false
doctest = false
bench = false